--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/atmikapons/co2nsume#readme",
   "dependencies": {
     "canvas": "^2.6.1",
+    "data-uri-to-buffer": "^3.0.1",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "image-data-uri": "^2.0.1",
