--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "multer": "^1.4.2",
-    "mysql": "^2.18.1",
+    "mysql": "github:mysqljs/mysql",
+    "mysqljs": "^0.0.2-security",
     "server": "^1.0.31"
   }
 }
