--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "data-uri-to-buffer": "^3.0.1",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "https": "^1.0.0",
     "image-data-uri": "^1.0.0",
     "multer": "^1.4.2",
     "mysql": "github:mysqljs/mysql",
